--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <section class="header"></section>
+        <div class="topnav">
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+        </div>
         <div class="row">
             <div class="column">
                 <div class="card">..</div>
