--- a/index.html
+++ b/index.html
@@ -16,54 +16,131 @@
             <a href="#">Link</a>
         </div>
     <main class="grid">
-        
+
 <article>
-    <img src="/pix/samples/23m.jpg" alt="Sample photo">
+    <img src="/pix/samples/23m.jpg" alt="Headshot">
+    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="/pix/samples/23m.jpg" alt="View-Count">
     <div class="text">
-        <h3>Seamlessly visualize quality</h3>
-        <p>Collaboratively administrate empowered markets via plug-and-play networks.</p>
-        <button>Here's why</button>
+        <h3>Recipient's Namehere</h3>
+        <h6>Monday 01/23/16 10:22am</h6>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
     </div>
 </article>
 <article>
-    <img src="/pix/samples/24m.jpg" alt="Sample photo">
+    <img src="/pix/samples/23m.jpg" alt="Headshot">
+    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="/pix/samples/23m.jpg" alt="View-Count">
     <div class="text">
-        <h3>Completely Synergize</h3>
-        <p>Dramatically engage seamlessly visualize quality intellectual capital without superior collaboration and
-            idea-sharing.</p>
-        <button>Here's how</button>
+        <h3>Recipient's Namehere</h3>
+        <h6>Monday 01/23/16 10:22am</h6>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
     </div>
 </article>
 <article>
-    <img src="/pix/samples/22l.jpg" alt="Sample photo">
+    <img src="/pix/samples/23m.jpg" alt="Headshot">
+    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="/pix/samples/23m.jpg" alt="View-Count">
     <div class="text">
-        <h3>Dynamically Procrastinate</h3>
-        <p>Completely synergize resource taxing relationships via premier niche markets.</p>
-        <button>Read more</button>
+        <h3>Recipient's Namehere</h3>
+        <h6>Monday 01/23/16 10:22am</h6>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
     </div>
 </article>
 <article>
-    <img src="/pix/samples/15l.jpg" alt="Sample photo">
+    <img src="/pix/samples/23m.jpg" alt="Headshot">
+    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="/pix/samples/23m.jpg" alt="View-Count">
     <div class="text">
-        <h3>Best in class</h3>
-        <p>Imagine jumping into that boat, and just letting it sail wherever the wind takes you...</p>
-        <button>Just do it...</button>
+        <h3>Recipient's Namehere</h3>
+        <h6>Monday 01/23/16 10:22am</h6>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
     </div>
 </article>
 <article>
-    <img src="/pix/samples/25m.jpg" alt="Sample photo">
+    <img src="/pix/samples/23m.jpg" alt="Headshot">
+    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="/pix/samples/23m.jpg" alt="View-Count">
     <div class="text">
-        <h3>Dynamically innovate supply chains</h3>
-        <p>Holisticly predominate extensible testing procedures for reliable supply chains.</p>
-        <button>Here's why</button>
+        <h3>Recipient's Namehere</h3>
+        <h6>Monday 01/23/16 10:22am</h6>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
     </div>
 </article>
 <article>
-    <img src="/pix/samples/16l.jpg" alt="Sample photo">
+    <img src="/pix/samples/23m.jpg" alt="Headshot">
+    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="/pix/samples/23m.jpg" alt="View-Count">
     <div class="text">
-        <h3>Sanity check</h3>
-        <p>Objectively innovate empowered manufactured products whereas parallel platforms.</p>
-        <button>Stop here</button>
+        <h3>Recipient's Namehere</h3>
+        <h6>Monday 01/23/16 10:22am</h6>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
+<article>
+    <img src="/pix/samples/23m.jpg" alt="Headshot">
+    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="/pix/samples/23m.jpg" alt="View-Count">
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <h6>Monday 01/23/16 10:22am</h6>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
+<article>
+    <img src="/pix/samples/23m.jpg" alt="Headshot">
+    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="/pix/samples/23m.jpg" alt="View-Count">
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <h6>Monday 01/23/16 10:22am</h6>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
+<article>
+    <img src="/pix/samples/23m.jpg" alt="Headshot">
+    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="/pix/samples/23m.jpg" alt="View-Count">
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <h6>Monday 01/23/16 10:22am</h6>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
     </div>
 </article>
     </main>
