Fix header links

--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     </head>
     <body>
         <section class="header"></section>
         <div class="topnav">
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+            <a class="shares" href="#">SHARES
+                <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png" alt="share icon" height="10px" height="10px" styles="backgorund-color: #FFFFFF">
+            </a>
+            <a class="playlists" href="#">PLAYLISTS
+                <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png" alt="share icon" height="10px" height="10px">        
+            </a>
+            <a class="personal-videos" href="#">PERSONAL VIDEOS
+                <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png" alt="share icon" height="10px" height="10px">
+            </a>
         </div>
     <main class="grid">
 
 <article>
-    <img src="/pix/samples/23m.jpg" alt="Headshot">
-    <img src="/pix/samples/23m.jpg" alt="Expand">
+    <img src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot">
+    <img src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2" alt="Expand">
     <img src="/pix/samples/23m.jpg" alt="View-Count">
     <div class="text">
         <h3>Recipient's Namehere</h3>
