finish header links

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png" alt="share icon" height="10px" height="10px" styles="backgorund-color: #FFFFFF">
             </a>
             <a class="playlists" href="#">PLAYLISTS
-                <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png" alt="share icon" height="10px" height="10px">        
+                <img src="https://cdn-icons-png.flaticon.com/512/151/151917.png" alt="playlist icon" height="10px" height="10px">        
             </a>
             <a class="personal-videos" href="#">PERSONAL VIDEOS
-                <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png" alt="share icon" height="10px" height="10px">
+                <img src="https://cdn-icons-png.flaticon.com/512/456/456283.png" alt="personal-video icon" height="10px" height="10px">
             </a>
         </div>
     <main class="grid">
