finish card layout

--- a/index.html
+++ b/index.html
@@ -25,133 +25,25 @@
             </a>
         </div>
     <main class="grid">
+<article class="card">
+    <div class="profile">
+    <!-- <img class="headshot" src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot"> -->
+    <img class="expand" src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2" alt="Expand" width="20px" height="20px">
+    <div class="view-display">
+    <h5 class="views">VIEWS</h5>
+    <h1 class="view-count">04</h1>
+    </div>
+    </div>
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTATCHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
 
-<article>
-    <img src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot">
-    <img src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2" alt="Expand">
-    <img src="/pix/samples/23m.jpg" alt="View-Count">
-    <div class="text">
-        <h3>Recipient's Namehere</h3>
-        <h6>Monday 01/23/16 10:22am</h6>
-        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
-        <h5>PLAYLIST</h5>
-        <h4>Name of Playlist</h4>
-        <p>ATTATCHMENTS</p>
-        <h2>04</h2>
-    </div>
-</article>
-<article>
-    <img src="/pix/samples/23m.jpg" alt="Headshot">
-    <img src="/pix/samples/23m.jpg" alt="Expand">
-    <img src="/pix/samples/23m.jpg" alt="View-Count">
-    <div class="text">
-        <h3>Recipient's Namehere</h3>
-        <h6>Monday 01/23/16 10:22am</h6>
-        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
-        <h5>PLAYLIST</h5>
-        <h4>Name of Playlist</h4>
-        <p>ATTATCHMENTS</p>
-        <h2>04</h2>
-    </div>
-</article>
-<article>
-    <img src="/pix/samples/23m.jpg" alt="Headshot">
-    <img src="/pix/samples/23m.jpg" alt="Expand">
-    <img src="/pix/samples/23m.jpg" alt="View-Count">
-    <div class="text">
-        <h3>Recipient's Namehere</h3>
-        <h6>Monday 01/23/16 10:22am</h6>
-        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
-        <h5>PLAYLIST</h5>
-        <h4>Name of Playlist</h4>
-        <p>ATTATCHMENTS</p>
-        <h2>04</h2>
-    </div>
-</article>
-<article>
-    <img src="/pix/samples/23m.jpg" alt="Headshot">
-    <img src="/pix/samples/23m.jpg" alt="Expand">
-    <img src="/pix/samples/23m.jpg" alt="View-Count">
-    <div class="text">
-        <h3>Recipient's Namehere</h3>
-        <h6>Monday 01/23/16 10:22am</h6>
-        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
-        <h5>PLAYLIST</h5>
-        <h4>Name of Playlist</h4>
-        <p>ATTATCHMENTS</p>
-        <h2>04</h2>
-    </div>
-</article>
-<article>
-    <img src="/pix/samples/23m.jpg" alt="Headshot">
-    <img src="/pix/samples/23m.jpg" alt="Expand">
-    <img src="/pix/samples/23m.jpg" alt="View-Count">
-    <div class="text">
-        <h3>Recipient's Namehere</h3>
-        <h6>Monday 01/23/16 10:22am</h6>
-        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
-        <h5>PLAYLIST</h5>
-        <h4>Name of Playlist</h4>
-        <p>ATTATCHMENTS</p>
-        <h2>04</h2>
-    </div>
-</article>
-<article>
-    <img src="/pix/samples/23m.jpg" alt="Headshot">
-    <img src="/pix/samples/23m.jpg" alt="Expand">
-    <img src="/pix/samples/23m.jpg" alt="View-Count">
-    <div class="text">
-        <h3>Recipient's Namehere</h3>
-        <h6>Monday 01/23/16 10:22am</h6>
-        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
-        <h5>PLAYLIST</h5>
-        <h4>Name of Playlist</h4>
-        <p>ATTATCHMENTS</p>
-        <h2>04</h2>
-    </div>
-</article>
-<article>
-    <img src="/pix/samples/23m.jpg" alt="Headshot">
-    <img src="/pix/samples/23m.jpg" alt="Expand">
-    <img src="/pix/samples/23m.jpg" alt="View-Count">
-    <div class="text">
-        <h3>Recipient's Namehere</h3>
-        <h6>Monday 01/23/16 10:22am</h6>
-        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
-        <h5>PLAYLIST</h5>
-        <h4>Name of Playlist</h4>
-        <p>ATTATCHMENTS</p>
-        <h2>04</h2>
-    </div>
-</article>
-<article>
-    <img src="/pix/samples/23m.jpg" alt="Headshot">
-    <img src="/pix/samples/23m.jpg" alt="Expand">
-    <img src="/pix/samples/23m.jpg" alt="View-Count">
-    <div class="text">
-        <h3>Recipient's Namehere</h3>
-        <h6>Monday 01/23/16 10:22am</h6>
-        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
-        <h5>PLAYLIST</h5>
-        <h4>Name of Playlist</h4>
-        <p>ATTATCHMENTS</p>
-        <h2>04</h2>
-    </div>
-</article>
-<article>
-    <img src="/pix/samples/23m.jpg" alt="Headshot">
-    <img src="/pix/samples/23m.jpg" alt="Expand">
-    <img src="/pix/samples/23m.jpg" alt="View-Count">
-    <div class="text">
-        <h3>Recipient's Namehere</h3>
-        <h6>Monday 01/23/16 10:22am</h6>
-        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
-        <h5>PLAYLIST</h5>
-        <h4>Name of Playlist</h4>
-        <p>ATTATCHMENTS</p>
-        <h2>04</h2>
-    </div>
-</article>
     </main>
         <script src="" async defer></script>
     </body>
