--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     </head>
     <body>
-        <section class="header"></section>
+        <section class="header">
+        <h2 class="user">user</h2>
+        <h1 class="title">2Win</h1>
         <div class="topnav">
             <a class="shares" href="#">SHARES
                 <img src="https://cdn-icons-png.flaticon.com/512/929/929610.png" alt="share icon" height="10px" height="10px" styles="backgorund-color: #FFFFFF">
@@ -24,9 +26,10 @@
                 <img src="https://cdn-icons-png.flaticon.com/512/456/456283.png" alt="personal-video icon" height="10px" height="10px">
             </a>
         </div>
+        </section>
     <main class="grid">
 <article class="card">
-    <div class="profile">
+    <div class="profile" id="profile1">
     <!-- <img class="headshot" src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot"> -->
     <img class="expand" src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2" alt="Expand" width="20px" height="20px">
     <div class="view-display">
@@ -44,6 +47,151 @@
     </div>
 </article>
 
+<article class="card">
+    <div class="profile" id="profile2">
+        <!-- <img class="headshot" src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot"> -->
+        <img class="expand"
+            src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2"
+            alt="Expand" width="20px" height="20px">
+        <div class="view-display">
+            <h5 class="views">VIEWS</h5>
+            <h1 class="view-count">04</h1>
+        </div>
+    </div>
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTACHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
+
+<article class="card">
+    <div class="profile" id="profile3">
+        <!-- <img class="headshot" src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot"> -->
+        <img class="expand"
+            src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2"
+            alt="Expand" width="20px" height="20px">
+        <div class="view-display">
+            <h5 class="views">VIEWS</h5>
+            <h1 class="view-count">04</h1>
+        </div>
+    </div>
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTACHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
+
+<article class="card">
+    <div class="profile" id="profile4">
+        <!-- <img class="headshot" src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot"> -->
+        <img class="expand"
+            src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2"
+            alt="Expand" width="20px" height="20px">
+        <div class="view-display">
+            <h5 class="views">VIEWS</h5>
+            <h1 class="view-count">04</h1>
+        </div>
+    </div>
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTACHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
+
+<article class="card">
+    <div class="profile" id="profile5">
+        <!-- <img class="headshot" src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot"> -->
+        <img class="expand"
+            src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2"
+            alt="Expand" width="20px" height="20px">
+        <div class="view-display">
+            <h5 class="views">VIEWS</h5>
+            <h1 class="view-count">04</h1>
+        </div>
+    </div>
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTACHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
+
+<article class="card">
+    <div class="profile" id="profile6">
+        <!-- <img class="headshot" src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot"> -->
+        <img class="expand"
+            src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2"
+            alt="Expand" width="20px" height="20px">
+        <div class="view-display">
+            <h5 class="views">VIEWS</h5>
+            <h1 class="view-count">04</h1>
+        </div>
+    </div>
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTACHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
+
+<article class="card">
+    <div class="profile" id="profile7">
+        <!-- <img class="headshot" src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot"> -->
+        <img class="expand"
+            src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2"
+            alt="Expand" width="20px" height="20px">
+        <div class="view-display">
+            <h5 class="views">VIEWS</h5>
+            <h1 class="view-count">04</h1>
+        </div>
+    </div>
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTACHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
+<article class="card">
+    <div class="profile" id="profile8">
+        <!-- <img class="headshot" src="https://images.unsplash.com/photo-1625504615927-c14f4f309b63?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1365&q=80" alt="Headshot"> -->
+        <img class="expand"
+            src="https://cdn-icons.flaticon.com/png/512/2958/premium/2958783.png?token=exp=1658707860~hmac=7788a4532e6d808cb8f405a913a2a2e2"
+            alt="Expand" width="20px" height="20px">
+        <div class="view-display">
+            <h5 class="views">VIEWS</h5>
+            <h1 class="view-count">04</h1>
+        </div>
+    </div>
+    <div class="text">
+        <h3>Recipient's Namehere</h3>
+        <p>http://2win.2winstage.com/p/recipent's_namehere</p>
+        <h5>PLAYLIST</h5>
+        <h4>Name of Playlist</h4>
+        <p>ATTACHMENTS</p>
+        <h2>04</h2>
+    </div>
+</article>
     </main>
         <script src="" async defer></script>
     </body>
